--- a/src/app/pages/clinica-update/clinica-update.page.html
+++ b/src/app/pages/clinica-update/clinica-update.page.html
@@ -1,18 +1,21 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Voltar"></ion-back-button>
+    </ion-buttons>
     <ion-title>clinica_update</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- <form #form="ngForm" (ngSubmit)="update(form)">
-
-    <ion-card>
-      <img [src]="image" />
-      <ion-card-header>
-        <ion-card-title>{{clinicas.nomeclinica}}</ion-card-title>
-      </ion-card-header>
+  
+  <ion-card>
+    <img [src]="image" />
+    <ion-card-header>
+      <ion-card-title>{{clinicas.nomeclinica}}</ion-card-title>
+    </ion-card-header>
     
+    <form #form="ngForm" (ngSubmit)="update(form)">
       <ion-card-content>
         <ion-label><strong>Clinica</strong></ion-label>
         <ion-input type="text" name="nomeclinica" [ngModel]="clinicas.nomeclinica"></ion-input>
@@ -27,14 +30,9 @@
         <ion-label><strong>Bairro:</strong></ion-label>
         <ion-input arrow="4" type="text" name="bairro" [ngModel]="clinicas.bairro"></ion-input>
       </ion-card-content>
-      
-      <ion-card-content>
-        <ion-label><strong>Horario:</strong></ion-label>
-        <ion-input arrow="4" type="time" name="horario" [ngModel]="clinicas.horario"></ion-input>
-      </ion-card-content>
          
       <ion-button type="submit" color="success" expand="block">Atualizar</ion-button>
-
-    </ion-card>
-    </form> -->
+    </form>
+    
+  </ion-card>
 </ion-content>
