--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,6 +4,11 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>  
     <ion-title><strong>HOME</strong></ion-title>
+
+          <ion-buttons slot="end">
+            <ion-icon size="large" class="buttonClose" (click)="logout()" name="exit-outline"></ion-icon>
+          </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
@@ -56,7 +61,7 @@
       </ion-row>
   </ion-grid>
 
-  <ion-grid>
+  <!-- <ion-grid>
     <ion-row > 
       <ion-col size="10" offset="1">
         <button (click)="logout()">
@@ -69,7 +74,7 @@
         </button>
       </ion-col>
       </ion-row>
-  </ion-grid>
+  </ion-grid> -->
 
 </ion-content>
   
